--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 # MySQL database connecting strings
 spring.datasource.url=jdbc:mysql://localhost:3306/petstore?allowMultiQueries=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=alogim
-spring.datasource.password=TcfXuK!A3PG(q28f%Q3MnjvJGDk@7oZ5ymNfgU%*2M#XRUYedn
+spring.datasource.username=username
+spring.datasource.password=password
 
 ## Hibernate Properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
