--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 # MySQL database connecting strings
-spring.datasource.url=jdbc:mysql://localhost:3306/petstore?allowMultiQueries=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=username
-spring.datasource.password=password
+# spring.datasource.url=jdbc:mysql://localhost:3306/petstore?allowMultiQueries=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://mysql-db:3306/petstore?allowMultiQueries=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
 
 ## Hibernate Properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
@@ -14,3 +15,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 # Specify server port
 server.port=8081
+
+logging.level.io.swagger.injectablepetstore=DEBUG
+
